
Changes for Duro 0.7

- Implemented RDB_sdivide().

- Dropped RDB_tuple and RDB_array, using RDB_object instead.

- Implemented tuple-valued table attributes, RDB_wrap(), and RDB_unwrap().

- Implemented RDB_remove().

- Implemented insert into and update of projections.

- Added support for multiplication, division, unary minus, and string concatenation
  in expressions.

- Fixed bug with updating key attributes of tables with more than one
  candidate key.

- Fixed problem with commit/rollback after dropping tables.

- Tcl interface, including evaluation of relational expressions in
  Tutorial D syntax.

- Replaced RDB_make_persistent() by RDB_add_table().

Changes for Duro 0.6

- For the sake of uniformity, changed argument order of RDB_table_to_array()

- RDB_array_get_tuple() now obtains a pointer to a RDB_tuple.

- Added sorting (through the seqitc/seqitv arguments of
  RDB_table_to_array())

- Renamed RDB_value as RDB_object. Renamed RDB_init_value() as
  RDB_init_obj(), etc.

- RDB_drop_type now takes a RDB_transaction * argument

- More API changes. A draft API spec is now available.

- Replaced structure RDB_key_attrs by the more general RDB_string_vec.

- Implemented user-defined operators.

- Added support for default table attributes.

- Fixed issue with RDB_update().

- Added error logging.

- RDB_get_table now takes a RDB_transaction * argument.

- Implemented user-defined types.

- Renamed field "type" in RDB_attr as "typ", for the sake of uniformity.

Changes for Duro 0.5

- Added RDB_extract_tuple() to extract a single tuple from a table.

- Bugfixes

- Added regular expression matching (requires POSIX.2 regular expressions)

- Added argument 'options' to RDB_create_env().

- Added support for RENAME and SUMMARIZE PER (except COUNTD, SUMD, and AVGD).

- Changed error handling: Implicit rollback also by other system errors
  than deadlock; added function RDB_is_syserr() for checking for system
  errors.
