@@ -27,8 +27,8 @@ failure () {
 # Invoke a test application and compare output
 calltest () {
     echo $1
-    if ! ./$1 > /tmp/duro$$; then echo $?; failure; fi
-    if ! diff /tmp/duro$$ $1_output; then failure; fi
+    if ./$1 > /tmp/duro$$; then true; else echo $?; failure; fi
+    if diff /tmp/duro$$ $1_output; then true; else failure; fi
 }
 
 LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/.libs:$BDB_HOME/lib
@@ -41,11 +41,13 @@ calltest tupletest
 rm -rf dbenv
 mkdir dbenv
 
-if ! ./prepare; then failure; fi
+if ./prepare; then true; else failure; fi
 
 echo lstables
-if ! ../util/lstables -e dbenv -d TEST | sort > /tmp/duro$$; then echo $?; failure; fi
-if ! diff /tmp/duro$$ lstables_output; then failure; fi
+if ../util/lstables -e dbenv -d TEST | sort > /tmp/duro$$; then true
+else echo $?; failure; fi
+if diff /tmp/duro$$ lstables_output; then true
+else failure; fi
 
 calltest test_select
 calltest test_minus
@@ -81,13 +83,13 @@ calltest test_dropop
 rm /tmp/duro$$
 
 echo Dropping tables
-if ! ../util/droptable -e dbenv -d TEST SALARIES EMPS1H EMPS1 EMPS2 DEPTS DEEDUM \
-        SRTEST POINTTEST; then
+if ../util/droptable -e dbenv -d TEST SALARIES EMPS1H EMPS1 EMPS2 DEPTS DEEDUM \
+        SRTEST POINTTEST; then true; else
     failure
 fi
 
 echo Dropping DB
-if ! ../util/dropdb -e dbenv -d TEST TEST2; then
+if ../util/dropdb -e dbenv -d TEST TEST2; then true; else
     failure
 fi
 
